# aapt

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kappa/aapt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/utils/: Asset.h  AssetDir.h  AssetManager.h  Atomic.h  BufferedTextOutput.h  FileMap.h  KeyedVector.h  RefBase.h  ResourceTypes.h  SortedVector.h  Static.h  StreamingZipInflater.h  String16.h  String8.h  TextOutput.h  Unicode.h  Vector.h  VectorImpl.h  ZipFileRO.h  misc.h  threads.h  threadsex.h
app/src/main/cpp/utils-cpp/: Asset.cpp  AssetManager.cpp  BufferedTextOutput.cpp  Debug.cpp  FileMap.cpp  RefBase.cpp  ResourceTypes.cpp  SharedBuffer.cpp  Static.cpp  StreamingZipInflater.cpp  String16.cpp  String8.cpp  TextOutput.cpp  Unicode.cpp  VectorImpl.cpp  ZipFileRO.cpp  ZipUtils.cpp  atomic.cpp  misc.cpp  threadsex.c
app/src/main/java/com/kappa/aapt/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/com/kappa/aapt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
